--- a/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/helmrelease.yaml
@@ -65,6 +65,8 @@ spec:
             port: 6020
           mikrotik:
             port: 6030
+          metrics:
+            port: 9598
     persistence:
       config:
         type: configMap
