fix typo in scheme

--- a/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/servicemonitor.yaml
+++ b/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/servicemonitor.yaml
@@ -8,7 +8,7 @@ spec:
     - interval: 2m
       path: /metrics
       port: metrics
-      scheme: metrics
+      scheme: http
       scrapeTimeout: 10s
   selector:
     matchLabels:
