--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -258,7 +258,7 @@ spec:
               - imageupdateautomations
             verbs: [ "list", "watch" ]
       customResourceState:
-        enabled: false
+        enabled: true
         config:
           spec:
             resources:
