--- a/kubernetes/clusters/k0s/database/kustomization.yaml
+++ b/kubernetes/clusters/k0s/database/kustomization.yaml
@@ -8,5 +8,5 @@ resources:
   - ./ciliumnetworkpolicy.yaml
   - ./externalsecret.yaml
   # Flux-Kustomizations
-  - ./memcached/ks.yaml
+  #- ./memcached/ks.yaml
   - ./redis/ks.yaml
