--- a/kubernetes/clusters/k0s/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/loki/app/helmrelease.yaml
@@ -32,13 +32,13 @@ spec:
       memcached:
         chunk_cache:
           enabled: true
-          host: memcached-loki-chunk.database.svc
+          host: memcached-loki-chunk.monitoring.svc
           service: memcache
           batch_size: 256
           parallelism: 10
         results_cache:
           enabled: true
-          host: memcached-loki-results.database.svc
+          host: memcached-loki-results.monitoring.svc
           service: memcache
           default_validity: 12h
       structuredConfig:
