--- a/kubernetes/clusters/k0s/monitoring/loki/ks.yaml
+++ b/kubernetes/clusters/k0s/monitoring/loki/ks.yaml
@@ -5,12 +5,55 @@ metadata:
   name: &appname loki
   namespace: flux-system
 spec:
+  dependsOn:
+    - name: loki-memcached-results
+    - name: loki-memcached-chunk
   targetNamespace: monitoring
   commonMetadata:
     labels:
       app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/monitoring/loki/app
   prune: true
+  sourceRef:
+    kind: GitRepository
+    name: home-kubernetes
+  wait: false
+  interval: 30m
+  retryInterval: 1m
+  timeout: 15m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &appname loki-memcached-results
+  namespace: flux-system
+spec:
+  targetNamespace: monitoring
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
+  path: ./kubernetes/clusters/${ENVIRONMENT}/monitoring/loki/memcached-results
+  prune: false
+  sourceRef:
+    kind: GitRepository
+    name: home-kubernetes
+  wait: false
+  interval: 30m
+  retryInterval: 1m
+  timeout: 15m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &appname loki-memcached-chunk
+  namespace: flux-system
+spec:
+  targetNamespace: monitoring
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
+  path: ./kubernetes/clusters/${ENVIRONMENT}/monitoring/loki/memcached-chunk
+  prune: false
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
