--- a/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/resources/vector.yaml
+++ b/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/resources/vector.yaml
@@ -104,6 +104,7 @@ transforms:
       if parse_err != null {
           abort
       }
+      . = log
       # add timestamp
       .timestamp = ts
       # cleanup unused fields
