--- a/kubernetes/clusters/common/kube-system/kustomization.yaml
+++ b/kubernetes/clusters/common/kube-system/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ./namespace.yaml
   - ./ciliumcidrgroup.yaml
   # Flux-Kustomizations
-  - ./cilium/ks.yaml
+  #- ./cilium/ks.yaml
   - ./coredns/ks.yaml
   - ./external-secrets/ks.yaml
   - ./local-path-provisioner/ks.yaml
