--- a/kubernetes/clusters/main/monitoring/vector/app/agent/resources/vector.yaml
+++ b/kubernetes/clusters/main/monitoring/vector/app/agent/resources/vector.yaml
@@ -2,6 +2,11 @@
 data_dir: /vector-data-dir
 
 sources:
+  hubble_source:
+    type: file
+    include:
+      - /var/run/cilium/hubble/events.log
+
   journald_source:
     type: journald
     journal_directory: /var/log/journal
@@ -21,6 +26,13 @@ sources:
       node_labels: ""
 
 sinks:
+  hubble:
+    type: vector
+    compression: true
+    version: "2"
+    address: vector-aggregator.monitoring.svc.cluster.local:6000
+    inputs: ["hubble_source"]
+
   journald:
     type: vector
     compression: true
