--- a/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -166,6 +166,7 @@ spec:
         enabled: true
         static:
           enabled: true
+          filePath: /var/log/hubble-exporter.log
       tls:
         auto:
           method: certmanager
