--- a/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -271,5 +271,6 @@ spec:
           - NET_ADMIN
           - SYS_ADMIN
           - SYS_RESOURCE
-    routingMode: native
-    tunnel: disabled
+    routingMode: tunnel
+    tunnelProtocol: vxlan
+    tunnelPort: 8472
